# Ai-Student-Finance-App

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  sf.cpp  sf.h
